--- a/src/app/pages/historial/historial.page.html
+++ b/src/app/pages/historial/historial.page.html
@@ -40,7 +40,7 @@
   </ion-grid>
   <br>  
   <br />
-  <ion-button expand="round" shape="round" routerLink="/editarp">Agregar</ion-button>
+  <ion-button expand="round" shape="round" routerLink="/addempleado">Agregar</ion-button>
 
 <br>  
   <br />
@@ -87,9 +87,9 @@
             <div>61-12</div>
           </ion-col>
           <ion-col>
-            <ion-icon name="eye" routerLink="/empleadoinfo"></ion-icon>
-            <ion-icon name="create"></ion-icon>
-            <ion-icon name="trash"></ion-icon>
+            <ion-icon class="eye" name="eye" routerLink="/empleadoinfo"></ion-icon>
+            <ion-icon class="edit" name="create" routerLink="/editempleado"></ion-icon>
+            <ion-icon class="trash" name="trash"></ion-icon>
           </ion-col>
         </ion-row>
 
@@ -107,9 +107,9 @@
             <div>61-12</div>
           </ion-col>
           <ion-col>
-            <ion-icon name="eye"></ion-icon>
-            <ion-icon name="create"></ion-icon>
-            <ion-icon name="trash"></ion-icon>
+            <ion-icon class="eye" name="eye"></ion-icon>
+            <ion-icon class="edit" name="create"></ion-icon>
+            <ion-icon class="trash" name="trash"></ion-icon>
           </ion-col>
         </ion-row>
         <ion-row class="ion-align-items-start">
@@ -126,9 +126,9 @@
             <div>61-12</div>
           </ion-col>
           <ion-col>
-            <ion-icon name="eye"></ion-icon>
-            <ion-icon name="create"></ion-icon>
-            <ion-icon name="trash"></ion-icon>
+            <ion-icon class="eye" name="eye"></ion-icon>
+            <ion-icon class="edit" name="create"></ion-icon>
+            <ion-icon class="trash" name="trash"></ion-icon>
           </ion-col>
         </ion-row>
         <ion-row class="ion-align-items-start">
@@ -145,9 +145,9 @@
             <div>61-12</div>
           </ion-col>
           <ion-col>
-            <ion-icon name="eye"></ion-icon>
-            <ion-icon name="create"></ion-icon>
-            <ion-icon name="trash"></ion-icon>
+            <ion-icon class="eye" name="eye"></ion-icon>
+            <ion-icon class="edit" name="create"></ion-icon>
+            <ion-icon class="trash" name="trash"></ion-icon>
           </ion-col>
         </ion-row>
         <ion-row class="ion-align-items-start">
@@ -164,9 +164,9 @@
             <div>61-12</div>
           </ion-col>
           <ion-col>
-            <ion-icon name="eye"></ion-icon>
-            <ion-icon name="create"></ion-icon>
-            <ion-icon name="trash"></ion-icon>
+            <ion-icon class="eye" name="eye"></ion-icon>
+            <ion-icon class="edit" name="create"></ion-icon>
+            <ion-icon class="trash" name="trash"></ion-icon>
           </ion-col>
         </ion-row>
       </ion-grid>
