--- a/src/app/pages/historial/historial.page.scss
+++ b/src/app/pages/historial/historial.page.scss
@@ -38,6 +38,14 @@ ion-content {
       height: 60px;
       margin-top: 2%;
       margin-top: 16%;
+  }
 
-      
+  .eye {
+    color: #295896;
+  }
+  .edit {
+    color: #295896;
+  }
+  .trash {
+    color: #295896;
   }
