--- a/src/app/components/cards/cards.component.html
+++ b/src/app/components/cards/cards.component.html
@@ -28,7 +28,7 @@
   </ion-grid>
   <br>
   <br />
-  <ion-button expand="round" shape="round" routerLink="/addempleado">Agregar</ion-button>
+  <ion-button expand="round" shape="round" routerLi="/addempleado">Agregar</ion-button>
 
   <br>
   <br />
