--- a/src/app/pages/addproductos/addproductos.page.html
+++ b/src/app/pages/addproductos/addproductos.page.html
@@ -44,7 +44,7 @@
   </ion-row>
 
   <div class="centrado">
-    <ion-button shape="round" routerLink="/productos">Agregar</ion-button>
+    <ion-button shape="round" routerLink="/home">Agregar</ion-button>
   </div>
 
 </ion-content>
