--- a/src/app/pages/registroventas/registroventas.page.html
+++ b/src/app/pages/registroventas/registroventas.page.html
@@ -21,7 +21,7 @@
       <app-input label="Precio"></app-input>
     </form>
     <div class="centrado">
-      <ion-button shape="round" routerLink="/historialventas">Agregar</ion-button>
+      <ion-button shape="round" routerLink="/home">Agregar</ion-button>
     </div>
 
     <ion-row>
