--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -16,30 +16,27 @@
 
   <!-- MENU DESLIZABLE-->
   <ion-toolbar color='#145DA0'>
-    <ion-segment (ionChange)="segmentChanged($event)" scrollable="true" [value]="valueSelected">
-      <ion-segment-button value="inicio" routerLink="/historialventas">
-        <ion-label>Historial de ventas</ion-label>
+    <ion-segment>
+      <ion-segment-button value="inicio">
+        <ion-label>Menú Principal</ion-label>
       </ion-segment-button>
-      <ion-segment-button value="productos" routerLink="/productos">
-        <ion-label>Productos</ion-label>
-      </ion-segment-button>
-      <ion-segment-button value="ventas" routerLink="/analisisventas">
-        <ion-label>Analisis ventas</ion-label>
-      </ion-segment-button>
-      <ion-segment-button value="promociones">
-        <ion-label>Promociones</ion-label>
-      </ion-segment-button>
+
     </ion-segment>
   </ion-toolbar>
 
-  <!-- VENTANAS -->
-  <ion-content>
-    <div class="inicio" *ngIf="valueSelected === 'inicio'">
-      <app-cards [info]="cupones"></app-cards>
-    </div>
 
 
-    <!-- <ion-input [(ngModel)]="prueba.nombre" name="nombre" placeholder="Nombre"></ion-input>
-  <ion-input [(ngModel)]="prueba.apellidos" name="apellidos" placeholder="Apellidos"></ion-input>
-  <ion-button color="primary" (click)="create()">Primary</ion-button> -->
-  </ion-content>
+  <div class="container">
+    <nav>
+      <ul>
+        <li routerLink="/analisisventas">Análisis Ventas</li>
+        <li routerLink="/historialventas">Historial Ventas</li>
+        <li routerLink="/productos">Productos</li>
+        <li routerLink="/recomendaciones">Recomenda<br> ciones</li>
+      </ul>
+    </nav>
+  </div>
+
+
+
+</ion-content>
