--- a/src/app/pages/productos/productos.page.html
+++ b/src/app/pages/productos/productos.page.html
@@ -1,10 +1,9 @@
 <ion-content class="background-image">
 
-  <ion-header>
-    <ion-toolbar color="primary">
-      <ion-title class="ion-text-center"> Productos</ion-title>
+  <ion-header class="ion-no-border">
+    <ion-toolbar color='#145DA0'>
       <ion-buttons slot="start">
-        <ion-menu-button menu="main-menu"></ion-menu-button>
+        <ion-back-button text="Regresar" defaultHref="/home" mode="ios"></ion-back-button>
       </ion-buttons>
     </ion-toolbar>
   </ion-header>
