--- a/src/app/pages/registroqr/registroqr.page.html
+++ b/src/app/pages/registroqr/registroqr.page.html
@@ -3,7 +3,7 @@
   <ion-header class="ion-no-border">
     <ion-toolbar color='#145DA0'>
       <ion-buttons slot="start">
-        <ion-back-button text="Regresar" defaultHref="/historialventas" mode="ios"></ion-back-button>
+        <ion-back-button text="Regresar" defaultHref="/home" mode="ios"></ion-back-button>
       </ion-buttons>
     </ion-toolbar>
   </ion-header>
@@ -17,7 +17,7 @@
 
     <ion-item-divider class="disable"></ion-item-divider>
 
-    <ion-icon class="qr" name="qr-code-outline" routerLink="/historialventas"></ion-icon>
+    <ion-icon class="qr" name="qr-code-outline" routerLink="/home"></ion-icon>
 
 
   </ion-content>
